--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,7 +8,20 @@
    [(ngModel)]="data.username"
 -->
 <style>
- @import url('https://fonts.googleapis.com/css?family=Montserrat:300');
+/*  @import url('https://fonts.googleapis.com/css?family=Montserrat:300'); */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../assets/fonts/montserrat-v10-latin-300.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Light'), local('Montserrat-Light'),
+       url('../assets/fonts/montserrat-v10-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/montserrat-v10-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../assets/fonts/montserrat-v10-latin-300.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/montserrat-v10-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/montserrat-v10-latin-300.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+
 @import url('http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css');
 </style>
 
@@ -19,7 +32,7 @@
 </ion-header>
 
 
-<ion-content scrollbar-y-auto  style="font-family: 'Montserrat', sans-serif; overflow-y: auto !important; ">
+<ion-content scrollbar-y-auto  style="font-family: 'Montserrat', sans-serif; font-weight: 200; overflow-y: auto !important; ">
 
 
 <ion-list style="overflow:hidden" >
