--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,6 +9,7 @@
 -->
 <style>
 /*  @import url('https://fonts.googleapis.com/css?family=Montserrat:300'); */
+@import url('../assets/fonts/montserrat-v10-latin-300.ttf');
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
@@ -25,9 +26,9 @@
 @import url('http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css');
 </style>
 
-<ion-header primary>
-  <ion-navbar primary style="font-family: 'Montserrat', sans-serif !important">
-    <ion-title align="center">Login</ion-title>
+<ion-header primary style="font-family: 'Montserrat', sans-serif !important">
+  <ion-navbar primary >
+    <ion-title align="center">myApp Title </ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -40,7 +41,7 @@
   <div>
         <img src="img/icon.png" width="150" height="auto" style="display: block; margin-left: auto; margin-right: auto; padding-top : 5%;">
         <h2 align="center"> <span style="color:#365d7e; font-stretch:extra-expanded; font-size: 1.0em; font-family: 'Montserrat', sans-serif;"  class="title">
-            <b>Welcome to Reports Portal </b></span> </h2>
+            <b>Welcome to Report Portal </b></span> </h2>
 
    </div>
 
@@ -58,9 +59,15 @@
 <div align="center">
            <button ion-button (click)="login()">
            <ion-icon name="md-log-in"></ion-icon>
-             &nbsp;&nbsp;<b>Login </b> </button>
+             &nbsp;&nbsp;<b>Login </b>
+           </button>
 </div>
 </ion-list>
 
 </ion-content>
 
+<ion-footer no-border>
+  <ion-toolbar >
+    <ion-title>myFooter</ion-title>
+  </ion-toolbar>
+</ion-footer>
